--- a/Read&write file/Middleware/package.json
+++ b/Read&write file/Middleware/package.json
@@ -3,6 +3,7 @@
     "connect-flash": "^0.1.1",
     "express": "^5.1.0",
     "express-session": "^1.18.1",
+    "morgan": "^1.10.0",
     "nodemon": "^3.1.10"
   }
 }
